ajuste da navbar na pagina HistoriaAutismo

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
 /* Seus estilos personalizados abaixo */
 body,
 #root {
+  overflow-x: auto;
   min-height: 100vh;
   background: #ffffff; /* Cor branca */
   margin: 0;
